# app/user/controller/permission.go
@@ -28,7 +28,7 @@ func NewPermissionController(service *service.PermissionService) *PermissionCont
 // @Produce json
 // @Security Bearer
 // @Param request body define.CreatePermissionRequest true "CreatePermissionRequest"
-// @Success 200 {object} string
+// @Success 200 {object} common.Response
 // @Router /permission [post]
 func (c *PermissionController) CreatePermission(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "permission", "create"); !ok {
@@ -65,7 +65,7 @@ func (c *PermissionController) CreatePermission(ctx *gin.Context) {
 // @Security Bearer
 // @Param permission_id path int true "permission_id"
 // @Param request body define.UpdatePermissionRequest true "UpdatePermissionRequest"
-// @Success 200 {object} string
+// @Success 200 {object} common.Response
 // @Router /permission/{permission_id} [put]
 func (c *PermissionController) UpdatePermission(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "permission", "update"); !ok {
@@ -106,7 +106,7 @@ func (c *PermissionController) UpdatePermission(ctx *gin.Context) {
 // @Produce json
 // @Security Bearer
 // @Param permission_id path int true "permission_id"
-// @Success 200 {object} string
+// @Success 200 {object} common.Response
 // @Router /permission/{permission_id} [delete]
 func (c *PermissionController) DeletePermission(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "permission", "delete"); !ok {
@@ -143,7 +143,7 @@ func (c *PermissionController) DeletePermission(ctx *gin.Context) {
 // @Param current query int false "current"
 // @Param page_size query int false "page_size"
 // @Param target query string false "name"
-// @Success 200 {object} string
+// @Success 200 {object} common.Response{data=common.Page{list=[]define.PermissionPageResponse}}
 // @Router /permission [get]
 func (c *PermissionController) ListPermissions(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "permission", "list"); !ok {
